# Flask-MVC-Template

./: .bowerrc  .gitignore  .travis.yml  config.py  manage.py  pyproject.toml  readme.md  requirements.txt  run.py
app/: __init__.py  admin.py  assets.py  models.py  routes.py
app/food/: __init__.py  forms.py  routes.py  views.py
app/food/templates/food/: profile.html  upload.html
app/restaurant/: __init__.py  forms.py  routes.py  utils.py  views.py
app/restaurant/templates/restaurant/: profile.html  upload.html
app/templates/: index.html
app/templates/error/: 403.html  404.html  500.html
app/templates/layout/: base.html
app/templates/layout/partials/: footer.html  header.html
app/templates/macros/: _render_field.html
app/templates/security/: login.html  register.html
app/user/: __init__.py  forms.py  oauth.py  routes.py  utils.py  views.py
app/user/templates/user/: profile.html  upload.html
test/: test_back_end.py
tests/: test_back_end.py  test_front_end.py
