[tool.poetry]
name = "flask-mvc-template"
version = "1.0.0"
description = "A Flask template with batteries included."
authors = ["Carlos Azuaje"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
Flask = "^1.0"
Flask-Admin = "^1.5"
Flask-Assets = "^0.12.0"
Flask-Login = "^0.4.1"
Flask-Mail = "^0.9.1"
Flask-Principal = "^0.4.0"
Flask-Security = "^3.0"

[tool.poetry.dev-dependencies]
